05-admissionhooks/01-validating-admission-hooks/validation-admission-controller.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: label-validation-webhook
  namespace: custom-controllers
webhooks:
  - name: labels.pamir.com
    failurePolicy: Fail
    clientConfig:
      service:
        name: label-admission-controller
        namespace: custom-controllers
        path: /
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV1RENDQXFDZ0F3SUJBZ0lVU2J4KzNGbW1xRTVBTG9FYzl4cERWNkdwOE1Bd0RRWUpLb1pJaHZjTkFRRU4KQlFBd0RURUxNQWtHQTFVRUF4TUNZMkV3SGhjTk1qQXdPREkwTVRFeE9EQXdXaGNOTWpFd09ESTBNVEV4T0RBdwpXakE4TVRvd09BWURWUVFERXpGc1lXSmxiQzFoWkcxcGMzTnBiMjR0WTI5dWRISnZiR3hsY2k1amRYTjBiMjB0ClkyOXVkSEp2Ykd4bGNuTXVjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEKN1Q1ZDB3VDkySUE3VHB6NFJIekJET2JCbnFxUmZrakZ0U0thaHdVU2wyVnpRR0pWd3BHdFQvV0ltTFpZRk9vZQo2Qjh0ZS9RaHR [...]
    rules:
      - apiGroups: 
        - ""
        resources:
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
